--- a/places-react/package.json
+++ b/places-react/package.json
@@ -9,12 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.69.0",
         "next": "15.2.4",
+        "nuqs": "^2.4.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
+        "@next/eslint-plugin-next": "^15.2.4",
         "@tailwindcss/postcss": "^4",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
         "@types/node": "^20",
@@ -22,6 +25,7 @@
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.2.4",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "prettier": "^3.5.3",
         "prettier-plugin-tailwindcss": "^0.6.11",
         "tailwindcss": "^4",
