--- a/places-react/package.json
+++ b/places-react/package.json
@@ -9,17 +9,29 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.0",
+        "@notionhq/client": "^2.3.0",
+        "@phosphor-icons/react": "^2.1.7",
         "@tanstack/react-query": "^5.69.0",
+        "leaflet": "^1.9.4",
+        "leaflet-defaulticon-compatibility": "^0.1.2",
+        "motion": "^12.6.0",
         "next": "15.2.4",
         "nuqs": "^2.4.1",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-leaflet": "^5.0.0",
+        "react-use": "^17.6.0",
+        "slugify": "^1.6.6",
+        "usehooks-ts": "^3.1.1",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@next/eslint-plugin-next": "^15.2.4",
         "@tailwindcss/postcss": "^4",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@types/leaflet": "^1.9.17",
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
